# smart_folder

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: USER_GUIDE.md
scripts/: bump-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: albums.rs  bcut.rs  config.rs  duplicate.rs  fileops.rs  folders.rs  mcp.rs  media.rs  mod.rs  nas.rs  organize.rs  scan.rs  schedule.rs  sync.rs  tags.rs  undo.rs  volume.rs  watch.rs
src-tauri/src/core/: config.rs  mod.rs  quality.rs  scheduler.rs  sync.rs  trash.rs  volume.rs  watcher.rs
src-tauri/src/core/classifier/: mod.rs
src-tauri/src/core/hasher/: mod.rs
src-tauri/src/core/mcp/: mod.rs  tools.rs
src-tauri/src/core/metadata/: mod.rs
src-tauri/src/core/organizer/: mod.rs
src-tauri/src/core/scanner/: mod.rs
src-tauri/src/core/undo/: mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  queries.rs
src-tauri/src/nas/: mod.rs
src/components/albums/: AlbumManager.tsx
src/components/bcut/: BcutView.tsx
src/components/cleanup/: CleanupWizardView.tsx
src/components/common/: Toasts.tsx
src/components/culling/: CullingWorkspace.tsx  MemberPreview.tsx
src/components/dashboard/: DashboardView.tsx
src/components/duplicates/: DuplicatesView.tsx
src/components/foldertree/: DateFolderRenamePanel.tsx  FolderTreeView.tsx  SizeAnalysisPanel.tsx  TreeNodeRow.tsx  TreePanel.tsx  types.ts
src/components/gallery/: GalleryGrid.tsx
src/components/layout/: AreaTabs.tsx  NavRail.tsx  TitleBar.tsx
src/components/map/: MapView.tsx
src/components/nas/: NasConnectPanel.tsx  NasFolderBrowser.tsx  NasUploadView.tsx
src/components/organize/: HistoryView.tsx  OrganizeHub.tsx  OrganizeView.tsx
src/components/review/: ReviewView.tsx
src/components/settings/: SettingsView.tsx
src/components/sidebar/: Sidebar.tsx  VolumePanel.tsx
src/components/sync/: ConflictReviewPanel.tsx  SyncView.tsx
src/components/tags/: TagManager.tsx
src/components/treesize/: TreeSizeView.tsx
src/components/workbench/: WorkbenchView.tsx
src/hooks/: useTauriEvents.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ko.json
src/stores/: appStore.ts  toastStore.ts
src/types/: index.ts
src/utils/: format.ts  media.ts  navigation.ts  phase1.ts
