[package]
name = "smart-category"
version = "0.1.2"
description = "스마트 폴더 - AI 기반 스마트 미디어 정리 도구"
authors = ["스마트 폴더"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Image processing
image = "0.25"
kamadak-exif = "0.5"

# Hashing
sha2 = "0.10"

# Parallelism
rayon = "1.10"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# File system
walkdir = "2.5"
notify = "7.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2.0"
