[package]
name = "acut"
version = "0.3.0"
description = "에이컷 - 사진을 고르고 정리해 NAS로 올리는 컬링 스테이션"
authors = ["에이컷"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Image processing
image = "0.25"
kamadak-exif = "0.5"

# Hashing
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Configuration
serde_yaml = "0.9"

# Scheduling
tokio-cron-scheduler = "0.13"

# Pattern matching
glob = "0.3"

# Parallelism
rayon = "1.10"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# File system
walkdir = "2.5"
notify = "7.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2.0"
